fixed logged in as message going off screen on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ header {
 }
 
 .logout-header {
-  margin-left: 75%;
+  /* margin-left: 75%; */
 }
 
 @media screen and (min-width: 500px) {
